<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ongoing">Ongoing</string>
    <string name="past">Past</string>
    <string name="makro_food">Makro Food</string>
    <string name="time_sample">20 Aug 2019, 13:29</string>
    <string name="items">&#160;items</string>
    <string name="location_sample">No. 189 New Keebler Falls, Paradise…</string>
    <string name="total_price_sample">Total: 1504฿</string>
    <string name="view_receipt">View Receipt</string>
    <string name="reorder">reorder</string>
    <string name="order_detail">Order detail</string>
    <string name="your_order_from">Your order from</string>
    <string name="crystal_jade">Crystal Jade</string>
    <string name="time_upper">Time</string>
    <string name="your_order_number">Your order number</string>
    <string name="order_code_sample">UX1290AMN12</string>
    <string name="delivery_address">Delivery address</string>
    <string name="address_sample">No. 189 New Keebler Falls, Paradise Ave, 11</string>
    <string name="track">Track</string>
    <string name="tracking_order">Tracking order</string>
    <string name="help">help</string>
    <string name="your_order_will_arrive_in">Your order will arrive in</string>
    <string name="cancel">Cancel</string>
    <string name="can_not_cancel_order_dialog_title">Can’t Cancel the Order</string>
    <string name="cancel_order_dialog_tile">Cancel Order?</string>
    <string name="cancel_order_reason_already_prepare">Your order is being prepared and can’t be cancelled at this point. Contact WeFresh if you really need to cancel.</string>
    <string name="cancel_order_confirm_content">You have just placed your order. Are you sure want to cancel?</string>
    <string name="back">Back</string>
    <string name="contact">Contact</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="stay">Stay</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_is_prepared">Order is being prepared</string>
    <string name="food_is_prepared">Order is being prepared</string>
    <string name="order_is_being_deliverd">Order is on the way</string>
    <string name="order_is_completed">Order completed</string>
    <string name="arrive_in">Arrive in</string>
    <string name="enjoy_you_meal">Enjoy your meal!</string>
    <string name="your_order_has">Your Order has</string>
    <string name="arrived">Arrived</string>
    <string name="total">Total</string>
    <string name="order_incl_vat">(incl. VAT)</string>
    <string name="price_sample">269฿</string>
    <string name="payment_method">Payment method</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="promo">Promo</string>
    <string name="mastercard">Mastercard</string>
    <string name="your_order_updates_for">Your order updates for &#160;</string>
    <string name="bath_symbol">฿</string>
    <string name="wash_your_hands_often">“Wash your hands often”</string>
    <string name="your_friends_at_retail">- Your friends at</string>
    <string name="pending_payment">Pending payment.</string>
    <string name="order_confirmed_upper_case">Order confirmed.</string>
    <string name="order_prepared">Order is being prepared.</string>
    <string name="order_is_on_the_way">Order is on the way.</string>
    <string name="cancel_order_error_title">Oops! Unable to cancel order</string>
    <string name="delivery_time">Delivery time</string>
    <string name="delivery_time_sample">Monday, 10:00 - 12:00</string>
    <string name="order_completed">Order completed.</string>s
    <string name="order_cancelled">Order cancelled.</string>
    <string name="download_invoice">Download Invoice</string>
</resources>
