<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <com.vipulasri.ticketview.TicketView
        android:id="@+id/ticketView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/endOrderAddressSpaceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ticketBorderColor="@color/catskillWhite"
        app:ticketBorderWidth="1dp"
        app:ticketCornerRadius="12dp"
        app:ticketCornerType="rounded"
        app:ticketDividerColor="@color/athenGray"
        app:ticketDividerDashGap="8dp"
        app:ticketDividerPadding="14dp"
        app:ticketDividerType="dash"
        app:ticketOrientation="horizontal"
        app:ticketScallopPositionPercent="90"
        app:ticketScallopRadius="12dp"
        app:ticketShowBorder="true"
        app:ticketShowDivider="true" />

    <View
        android:id="@+id/overlayBackgroundView"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:background="@drawable/bg_border_catskillwhite_left_right_1_width"
        app:layout_constraintBottom_toBottomOf="@+id/ticketView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/orderContentBackgroundView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_border_catskillwhite_left_right_bottom_1_width_bottom_12_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/orderFromTextView"
            style="@style/R16.FrenchGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_order_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iconStatusImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_order_checked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/orderFromNameTextView"
            app:layout_constraintBottom_toBottomOf="@id/orderFromNameTextView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/orderFromNameTextView"
            style="@style/M15.Trout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:text="@string/crystal_jade"
            app:layout_constraintStart_toEndOf="@+id/iconStatusImageView"
            app:layout_constraintTop_toBottomOf="@id/orderFromTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderLayout">

        <TextView
            android:id="@+id/timeTextView"
            style="@style/R16.FrenchGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_upper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderTimeTextView"
            style="@style/M15.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/time_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deliveryTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderTimeLayout">

        <TextView
            android:id="@+id/deliveryTextView"
            style="@style/R16.FrenchGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deliveryTimeTextView"
            style="@style/M15.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryTextView"
            tools:text="@string/delivery_time_sample" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliveryTimeLayout">

        <TextView
            android:id="@+id/orderNumTextView"
            style="@style/R16.FrenchGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_order_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderNumDetailTextView"
            style="@style/M15.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/order_code_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderNumTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deliveryAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderNoLayout">

        <TextView
            android:id="@+id/deliveryAddressTextView"
            style="@style/R16.FrenchGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deliveryDetailTextView"
            style="@style/M15.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/address_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryAddressTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/endOrderAddressSpaceView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryAddressLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productItemRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/dividerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliveryAddressLayout"
        tools:itemCount="2"
        tools:listitem="@layout/item_product_order_detail" />

    <ImageView
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layerType="software"
        android:src="@drawable/bg_ticket_dash_gray"
        app:layout_constraintTop_toBottomOf="@id/productItemRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/promoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/dividerView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/promoTitleTextView"
            style="@style/P1.DodgerBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/promoDiscountTextView"
            style="@style/R18.DodgerBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="฿0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/promoLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/subtotalTitleTextView"
            style="@style/R16.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/subtotalTextView"
            style="@style/R18.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="฿0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deliverFeeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/subTotalLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/deliveryFeeTextView"
            style="@style/R16.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_fee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/deliveryFeeDetailTextView"
            style="@style/R18.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/zero_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/totalFeeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/deliverFeeLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/totalTextView"
            style="@style/H2.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalVatTextView"
            style="@style/R20.Trout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order_incl_vat"
            app:layout_constraintStart_toEndOf="@id/totalTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalSumTextView"
            style="@style/H2.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="end"
            android:text="@string/zero_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paymentMethodLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalFeeLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/paymenthodTextView"
            style="@style/B12.Trout40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            app:layout_constraintBottom_toBottomOf="@+id/paymentImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/paymentImageView" />

        <ImageView
            android:id="@+id/paymentImageView"
            android:layout_width="34dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_catskillwhite_5_radius"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@id/paymentTypeTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/ic_payment_cash" />

        <TextView
            android:id="@+id/paymentTypeTextView"
            style="@style/B12.Trout40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@+id/paymentImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/paymentImageView"
            tools:text="@string/mastercard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/downloadInvoiceTextView"
        style="@style/L1.DodgerBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/download_invoice"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentMethodLayout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
