<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardElevation="@dimen/defaultViewElevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/orderImageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_order_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iconStatusImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_order_checked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderImageView" />

        <TextView
            android:id="@+id/merchantNameTextView"
            style="@style/H2.Trout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconStatusImageView"
            app:layout_constraintTop_toBottomOf="@id/orderImageView"
            tools:text="@string/makro_food" />

        <TextView
            android:id="@+id/arriveTimeTextView"
            style="@style/P2.Trout70"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconStatusImageView"
            app:layout_constraintTop_toBottomOf="@id/merchantNameTextView"
            tools:text="@string/time_sample" />

        <View
            android:id="@+id/viewStroke"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/catskillWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/arriveTimeTextView" />

        <ImageView
            android:id="@+id/cartGrayImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_cart_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewStroke" />

        <TextView
            android:id="@+id/quantityProductTextView"
            style="@style/P2.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            android:text="@string/items"
            app:layout_constraintStart_toEndOf="@id/cartGrayImageView"
            app:layout_constraintTop_toBottomOf="@id/viewStroke" />

        <ImageView
            android:id="@+id/locationGrayImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_location_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cartGrayImageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/locationPickupTextView"
            style="@style/P2.Trout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/locationGrayImageView"
            app:layout_constraintTop_toBottomOf="@id/cartGrayImageView"
            tools:text="@string/location_sample" />

        <ImageView
            android:id="@+id/deliveryImageView"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_clock_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationPickupTextView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/timePickupTextView"
            style="@style/P2.Trout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deliveryImageView"
            app:layout_constraintTop_toBottomOf="@id/locationPickupTextView"
            tools:text="@string/location_sample" />

        <View
            android:id="@+id/viewStroke2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/catskillWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timePickupTextView" />

        <TextView
            android:id="@+id/totalPriceOrderTextView"
            style="@style/B18.Trout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:text="@string/zero_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewStroke2" />

        <TextView
            android:id="@+id/viewReceiptOrderTextView"
            style="@style/B15.DodgerBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/view_receipt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalPriceOrderTextView" />

        <TextView
            android:id="@+id/reOrderTextView"
            style="@style/B15.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_blue_15_radius"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/reorder"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewStroke2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>